loadtester/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: ing
  namespace: loadtester
spec:
  rules:
  - host: flagger-loadtester.local
    http:
      paths:
        - backend:
            service:
              name: flagger-loadtester-svc
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
